test/classes/bradc/overloadMethods/v4oneClassReturnNoMatch.good
v4oneClassReturnNoMatch.chpl:17: error: return type not compatible with parent class

OR

1..1
1..2
1..3
1..4
